===============
Version History
===============

.. contents::
    :local:

0.95
====

.. _v094-news:

News
----
**TODO** Version 0.95 of StarCluster is...

.. _v095-features:

Features
--------
* Option to prefix dns names of created nodes with the cluster tag

.. _v094-fixes:

Bug Fixes
---------
* 

.. _version-0.94:

0.94
====

.. _v094-news:

News
----
Version 0.94 of StarCluster is a feature release that fixes *many* bugs. See
the "Features" and "Bug Fixes" sections below for details.  This release is
not compatible with any active clusters that were created using any previous
version of StarCluster. Please terminate all existing clusters before
upgrading to 0.94.

.. _v094-features:

Features
--------
* Support for hs1.8xlarge, hi1.4xlarge, and m3 instance types
* Added support for userdata scripts (new cluster setting: userdata_scripts)
* Add *all* ephemeral drives for any instance type when launching instances
* Updated base AMIs to latest 12.04 versions
* OGS (formerly SGE): set default parallel environment allocation_rule to $fill_up
* Added authentication agent forwarding to sshmaster, sshnode, and sshinstance
* Support for loading config based on STARCLUSTER_CONFIG environment variable
* New plugin to install python packages with pip (pypkginstaller plugin)
* New plugin that either copies or autogenerates a boto config for the cluster
  user
* Added --force option to terminate/stop commands
* Add tags and virtualization type to listinstance output
* Add --zone (-z) option to spothistory command

.. _v094-fixes:

Bug Fixes
---------
* sshutils: source /etc/profile by default
* awsutils: validate AWS SSL certificates by default
* awsutils: refetch group before calling authorize
* awsutils: use 3 decimal places in spot history prices
* cluster: fix thread leak when running plugins
* cluster: store cluster metadata in userdata/tags
* cluster: dont launch master as spot when cluster_size=1
* cluster: reraise uncaught exceptions in run_plugins