@@ -49,6 +49,16 @@ class CmdRemoveNode(ClusterCompleter):
     tag = None
 
     def addopts(self, parser):
+        templates = []
+        if self.cfg:
+            templates = self.cfg.clusters.keys()
+        parser.add_option(
+            "-c", "--cluster-template", action="store",
+            dest="cluster_template", choices=templates, default=None,
+            help="cluster template to use from the config file")
+        parser.add_option("-f", "--force", dest="force", action="store_true",
+                          default=False,  help="Terminate node regardless "
+                          "of errors if possible ")
         parser.add_option("-k", "--keep-instance", dest="terminate",
                           action="store_false", default=True,
                           help="do not terminate instances "
@@ -60,4 +70,6 @@ class CmdRemoveNode(ClusterCompleter):
         tag = self.tag = args[0]
         aliases = args[1:]
         for alias in aliases:
-            self.cm.remove_node(tag, alias, terminate=self.opts.terminate)
+            self.cm.remove_node(tag, alias, terminate=self.opts.terminate,
+                                template=self.opts.cluster_template,
+                                force=self.opts.force)
